--- a/scss/base/_vars.scss
+++ b/scss/base/_vars.scss
@@ -1,5 +1,6 @@
 $color-bg: #060f16;
 $color-primary: #1e99f7;
 // $color-secondary: ;
-$color-content: #d3d3d3;
+$color-content: #818181;
 $color-text-main: white;
+$color-text-gradient: linear-gradient(45deg, #17A4FC, #16E7FE);
