--- a/scss/base/_vars.scss
+++ b/scss/base/_vars.scss
@@ -1,6 +1,7 @@
 $color-bg: #060f16;
 $color-primary: #1e99f7;
-// $color-secondary: ;
 $color-content: #818181;
 $color-text-main: white;
-$color-text-gradient: linear-gradient(45deg, #17A4FC, #16E7FE);
+$color-text-gradient: linear-gradient(130deg, #17A4FC, #16E7FE);
+$color-card-border-gradient: linear-gradient(130deg, #284c6c, #060f16, #244a4d);
+$br-width: 10px;
