--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -3,6 +3,10 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Lobster&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     font-family: "Montserrat", sans-serif;
     background-color: $color-bg;
