--- a/scss/partials/_about.scss
+++ b/scss/partials/_about.scss
@@ -1,4 +1,5 @@
 @use '../base/mixins' as *;
+@use '../base/vars' as *;
 
 .about {
 
@@ -8,5 +9,23 @@
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         column-gap: 20px;
+    }
+
+    & .about-title {
+        font-size: 30px;
+    }
+
+    & .about-box {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 100px;
+        height: 100px;
+        border: 1px solid $color-primary;
+        border-radius: 100px;
+    }
+
+    & .icon-img {
+        width: 50px;
     }
 }
