--- a/css/main.css
+++ b/css/main.css
@@ -113,6 +113,21 @@ a {
   color: white;
 }
 
+.section-desc {
+  text-transform: uppercase;
+  color: #1e99f7;
+}
+
+.section-title {
+  font-size: 30px;
+  font-weight: 700;
+}
+
+.section-text {
+  margin-top: 20px;
+  color: #818181;
+}
+
 .container {
   margin: 0 auto;
   padding-inline: 15px;
@@ -171,6 +186,21 @@ a {
   background: linear-gradient(45deg, rgba(30, 153, 247, 0.3), rgba(255, 255, 255, 0) 20%, rgba(255, 255, 255, 0) 80%, rgba(30, 153, 247, 0.3));
 }
 
+@property --color-start {
+  syntax: "<color>";
+  inherits: false;
+  initial-value: #060f16;
+}
+@property --color-center {
+  syntax: "<color>";
+  inherits: false;
+  initial-value: #060f16;
+}
+@property --color-end {
+  syntax: "<color>";
+  inherits: false;
+  initial-value: #060f16;
+}
 .card-static {
   background: linear-gradient(130deg, #284c6c, #060f16, #244a4d);
   border-radius: 10px;
@@ -207,7 +237,8 @@ a {
 }
 
 .card-neon {
-  background: transparent;
+  background: linear-gradient(130deg, var(--color-start), var(--color-center), var(--color-end));
+  transition: --color-start 0.8s, --color-center 0.8s, --color-end 0.8s;
   border-radius: 10px;
   margin-bottom: 20px;
   padding: 2px;
@@ -236,15 +267,12 @@ a {
 .card-neon .card-neon-box {
   background-color: rgba(11, 24, 30, 0.2);
   backdrop-filter: blur(30px);
-  padding: 50px;
-  border-radius: inherit;
-  display: flex;
-  align-items: center;
-  column-gap: 20px;
 }
 
 .card-neon:hover {
-  background: linear-gradient(130deg, #284c6c, #060f16, #244a4d);
+  --color-start: #284c6c;
+  --color-center: #060f16;
+  --color-end: #244a4d;
 }
 
 .card-neon:hover .card-neon-body::before {
@@ -356,6 +384,36 @@ a {
 }
 .about .icon-img {
   width: 50px;
+}
+.about .icon-right-icon {
+  width: 50px;
+  height: 50px;
+  padding: 10px;
+  background: linear-gradient(45deg, #1ab4fe, #1be8fb);
+  border-radius: 100px;
+}
+.about .about-right-wrapper {
+  display: flex;
+  column-gap: 20px;
+  margin-top: 20px;
+}
+.about .card-right-box-wrapper {
+  display: flex;
+  align-items: center;
+  column-gap: 20px;
+  margin-bottom: 20px;
+}
+.about .card-item1 {
+  padding: 50px;
+  display: flex;
+  align-items: center;
+  column-gap: 20px;
+}
+.about .card-item2 {
+  padding: 30px;
+  display: block;
+  align-items: center;
+  column-gap: 20px;
 }
 
 /*# sourceMappingURL=main.css.map */
