--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -32,6 +32,49 @@ a {
     color: $color-content;
 }
 
+.line-wrapper {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: -1;
+    height: 100vh;
+    padding: 0 10%;
+    display: flex;
+    justify-content: space-between;
+
+    .line {
+        position: relative;
+        background: rgba(255, 255, 255, 0.2);
+        width: 1px;
+        height: 100vh;
+
+        &::after {
+            position: absolute;
+            content: '';
+            width: 4px;
+            height: 30px;
+            background: white;
+            top: 0;
+            left: calc(50% - 2px);
+            border-radius: 20px;
+            animation: animateTopBottom 5s infinite;
+        }
+    }
+}
+
+.line:nth-child(1)::after {
+    animation-delay: .4s;
+}
+
+.line:nth-child(2)::after {
+    animation-delay: .2s;
+}
+
+.line:nth-child(3)::after {
+    animation-delay: .8s;
+}
+
 .container {
     margin: 0 auto;
     padding-inline: 15px;
@@ -58,5 +101,21 @@ a {
 
     @include adaptive(1400px) {
         max-width: 1320px;
+    }
+}
+
+@keyframes animateTopBottom {
+    0% {
+        top: 0;
+        opacity: 0;
+    }
+
+    30% {
+        opacity: 0.3;
+    }
+
+    100% {
+        top: 100%;
+        opacity: 1;
     }
 }
