--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -7,6 +7,10 @@ html {
     scroll-behavior: smooth;
 }
 
+.hidden {
+    display: none;
+}
+
 body {
     font-family: "Montserrat", sans-serif;
     background-color: $color-bg;
