--- a/scss/components/_card.scss
+++ b/scss/components/_card.scss
@@ -76,7 +76,7 @@
             content: '';
             width: 160px;
             height: 160px;
-            bottom: -30%;
+            bottom: -80px;
             left: 50%;
             transform: translateX(-80px);
             background-color: #125a8c;
