--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,8 @@
 *,
 *::before,
 *::after {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 :focus,
@@ -75,7 +76,8 @@ input::-ms-clear {
 
 button, input[type=submit] {
   display: inline-block;
-  box-shadow: none;
+  -webkit-box-shadow: none;
+          box-shadow: none;
   background-color: transparent;
   background: none;
   cursor: pointer;
@@ -140,8 +142,12 @@ a {
   z-index: -1;
   height: 100vh;
   padding: 0 10%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 .line-wrapper .line {
   position: relative;
@@ -158,19 +164,23 @@ a {
   top: 0;
   left: calc(50% - 2px);
   border-radius: 20px;
-  animation: animateTopBottom 5s infinite;
+  -webkit-animation: animateTopBottom 5s infinite;
+          animation: animateTopBottom 5s infinite;
 }
 
 .line:nth-child(1)::after {
-  animation-delay: 0.4s;
+  -webkit-animation-delay: 0.4s;
+          animation-delay: 0.4s;
 }
 
 .line:nth-child(2)::after {
-  animation-delay: 0.2s;
+  -webkit-animation-delay: 0.2s;
+          animation-delay: 0.2s;
 }
 
 .line:nth-child(3)::after {
-  animation-delay: 0.8s;
+  -webkit-animation-delay: 0.8s;
+          animation-delay: 0.8s;
 }
 
 .container {
@@ -208,6 +218,20 @@ a {
   }
 }
 
+@-webkit-keyframes animateTopBottom {
+  0% {
+    top: 0;
+    opacity: 0;
+  }
+  30% {
+    opacity: 0.3;
+  }
+  100% {
+    top: 100%;
+    opacity: 1;
+  }
+}
+
 @keyframes animateTopBottom {
   0% {
     top: 0;
@@ -225,15 +249,19 @@ a {
   border: 1px solid rgba(255, 255, 255, 0.3);
   padding: 15px 30px;
   border-radius: 100px;
-  column-gap: 10px;
+  -webkit-column-gap: 10px;
+     -moz-column-gap: 10px;
+          column-gap: 10px;
   display: inline-block;
   background: linear-gradient(45deg, rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0) 20%, rgba(255, 255, 255, 0) 80%, rgba(255, 255, 255, 0.3));
+  -webkit-transition: 0.3s;
   transition: 0.3s;
 }
 .btn .ri-arrow-right-line {
   position: relative;
   top: 0;
   left: 0;
+  -webkit-transition: 0.3s;
   transition: 0.3s;
 }
 .btn:hover .ri-arrow-right-line {
@@ -282,10 +310,12 @@ a {
   height: 160px;
   bottom: -20%;
   left: 50%;
-  transform: translateX(-80px);
+  -webkit-transform: translateX(-80px);
+          transform: translateX(-80px);
   background-color: #125a8c;
   border-radius: 100%;
-  filter: blur(30px);
+  -webkit-filter: blur(30px);
+          filter: blur(30px);
 }
 .card-static .card-static-box {
   background-color: rgba(11, 24, 30, 0.2);
@@ -314,11 +344,14 @@ a {
   height: 160px;
   bottom: -80px;
   left: 50%;
-  transform: translateX(-80px);
+  -webkit-transform: translateX(-80px);
+          transform: translateX(-80px);
   background-color: #125a8c;
   border-radius: 100%;
-  filter: blur(30px);
+  -webkit-filter: blur(30px);
+          filter: blur(30px);
   opacity: 0;
+  -webkit-transition: 0.3s;
   transition: 0.3s;
 }
 .card-neon .card-neon-box {
@@ -344,11 +377,19 @@ a {
   padding-block: 15px;
 }
 .header .header-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 .header .menu {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   gap: 60px;
 }
@@ -359,6 +400,7 @@ a {
   color: #1e99f7;
 }
 .header .link {
+  -webkit-transition: 0.3s;
   transition: 0.3s;
 }
 .header .link.active {
@@ -371,17 +413,26 @@ a {
   color: #1e99f7;
 }
 .header .header-social {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   gap: 30px;
 }
 .header .social-link {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   width: 40px;
   height: 40px;
   background-color: rgba(14, 35, 51, 0.7);
   border-radius: 100px;
+  -webkit-transition: 0.3s;
   transition: 0.3s;
 }
 .header .social-link:hover {
@@ -389,6 +440,7 @@ a {
 }
 
 .home {
+  background: -webkit-gradient(linear, left top, right top, from(#060f16), color-stop(rgba(6, 15, 22, 0.2)), to(#060f16)), url("../../images/Hero.jpg");
   background: linear-gradient(90deg, #060f16, rgba(6, 15, 22, 0.2), #060f16), url("../../images/Hero.jpg");
   background-position: center;
   background-size: cover;
@@ -415,7 +467,8 @@ a {
 }
 .home #element {
   background: linear-gradient(130deg, #17A4FC, #16E7FE);
-  background-clip: text;
+  -webkit-background-clip: text;
+          background-clip: text;
   color: transparent;
 }
 
@@ -425,15 +478,23 @@ a {
 .about .about-wrapper {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  column-gap: 40px;
+  -webkit-column-gap: 40px;
+     -moz-column-gap: 40px;
+          column-gap: 40px;
 }
 .about .about-title {
   font-size: 30px;
 }
 .about .about-box {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   width: 100px;
   height: 100px;
   border: 1px solid #1e99f7;
@@ -450,27 +511,47 @@ a {
   border-radius: 100px;
 }
 .about .about-right-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  column-gap: 20px;
+  -webkit-column-gap: 20px;
+     -moz-column-gap: 20px;
+          column-gap: 20px;
   margin-top: 20px;
 }
 .about .card-right-box-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  column-gap: 20px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-column-gap: 20px;
+     -moz-column-gap: 20px;
+          column-gap: 20px;
   margin-bottom: 20px;
 }
 .about .card-item1 {
   padding: 50px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  column-gap: 20px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-column-gap: 20px;
+     -moz-column-gap: 20px;
+          column-gap: 20px;
 }
 .about .card-item2 {
   padding: 30px;
   display: block;
-  align-items: center;
-  column-gap: 20px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-column-gap: 20px;
+     -moz-column-gap: 20px;
+          column-gap: 20px;
 }
 
 .service .service-box {
@@ -480,14 +561,22 @@ a {
 .service .service-wrapper {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  align-items: center;
-  column-gap: 40px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-column-gap: 40px;
+     -moz-column-gap: 40px;
+          column-gap: 40px;
 }
 .service .card-item1 {
   padding: 20px;
   display: block;
-  align-items: start;
-  column-gap: 0;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: start;
+  -webkit-column-gap: 0;
+     -moz-column-gap: 0;
+          column-gap: 0;
 }
 .service .card-item1 span {
   font-size: 20px;
@@ -501,15 +590,22 @@ a {
   margin-bottom: 20px;
 }
 .portfolio .portfolio-tabs {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  column-gap: 8px;
-  justify-content: center;
+  -webkit-column-gap: 8px;
+     -moz-column-gap: 8px;
+          column-gap: 8px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 .portfolio .portfolio-tab {
   padding: 15px;
   background-color: #0b1c29;
   border-radius: 15px;
   cursor: pointer;
+  -webkit-transition: 0.5s;
   transition: 0.5s;
 }
 .portfolio .portfolio-tab.active {
@@ -528,16 +624,24 @@ a {
 .portfolio .card-item1 {
   padding: 20px;
   display: block;
-  align-items: srart;
-  column-gap: 0;
+  -webkit-box-align: srart;
+      -ms-flex-align: srart;
+          align-items: srart;
+  -webkit-column-gap: 0;
+     -moz-column-gap: 0;
+          column-gap: 0;
 }
 .portfolio .portfolio-card-title {
   font-size: 30px;
   margin-top: 20px;
 }
 .portfolio .portfolio-card-cat {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  column-gap: 10px;
+  -webkit-column-gap: 10px;
+     -moz-column-gap: 10px;
+          column-gap: 10px;
   margin-block: 20px;
 }
 .portfolio .portfolio-card-cat li {
@@ -572,8 +676,12 @@ a {
 .education .card-item1 {
   padding: 20px;
   display: block;
-  align-items: start;
-  column-gap: 0;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: start;
+  -webkit-column-gap: 0;
+     -moz-column-gap: 0;
+          column-gap: 0;
 }
 
 .price {
@@ -583,9 +691,15 @@ a {
   text-align: center;
 }
 .price .price-tabs {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  column-gap: 8px;
-  justify-content: center;
+  -webkit-column-gap: 8px;
+     -moz-column-gap: 8px;
+          column-gap: 8px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   margin-top: 40px;
 }
 .price .price-tab {
@@ -593,6 +707,7 @@ a {
   background-color: #0b1c29;
   border-radius: 15px;
   cursor: pointer;
+  -webkit-transition: 0.5s;
   transition: 0.5s;
 }
 .price .price-tab.active {
@@ -602,5 +717,49 @@ a {
 .price .price-tab:hover {
   color: #1e99f7;
 }
-
-/*# sourceMappingURL=main.css.map */
+.price .price-monthly {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  margin-top: 50px;
+  gap: 30px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.price .price-monthly.hidden {
+  display: none;
+}
+.price .price-monthly .card-neon:nth-child(2) {
+  scale: 1.1;
+}
+.price .card-item1 {
+  padding: 20px;
+  display: block;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: start;
+  -webkit-column-gap: 0;
+     -moz-column-gap: 0;
+          column-gap: 0;
+}
+.price .price-title, .price .price-month, .price .price-list-items {
+  color: #818181;
+}
+.price .price-count {
+  font-size: 40px;
+  font-weight: 700;
+}
+.price .price-month {
+  border-bottom: 1px solid #3a3a3a;
+  margin-bottom: 20px;
+  padding-bottom: 20px;
+}
+.price .price-list-items {
+  margin-bottom: 20px;
+}
+.price .price-list-items li {
+  margin-bottom: 10px;
+}
+.price .price-title, .price .price-month {
+  font-size: 18px;
+}/*# sourceMappingURL=main.css.map */
