--- a/css/main.css
+++ b/css/main.css
@@ -151,18 +151,18 @@ a {
 }
 .line-wrapper .line {
   position: relative;
-  background: rgba(255, 255, 255, 0.2);
+  background: #10283a;
   width: 1px;
   height: 100vh;
 }
 .line-wrapper .line::after {
   position: absolute;
   content: "";
-  width: 4px;
+  width: 2px;
   height: 30px;
   background: white;
   top: 0;
-  left: calc(50% - 2px);
+  left: calc(50% - 1px);
   border-radius: 20px;
   -webkit-animation: animateTopBottom 5s infinite;
           animation: animateTopBottom 5s infinite;
@@ -181,6 +181,35 @@ a {
 .line:nth-child(3)::after {
   -webkit-animation-delay: 0.8s;
           animation-delay: 0.8s;
+}
+
+.card-info {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 20px;
+  margin-block: 10px;
+}
+.card-info .card-info-icon {
+  width: 50px;
+  height: 50px;
+  border: 1px solid #818181;
+  border-radius: 100px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+.card-info .card-info-content span {
+  color: #818181;
 }
 
 .container {
@@ -223,8 +252,8 @@ a {
     top: 0;
     opacity: 0;
   }
-  30% {
-    opacity: 0.3;
+  20% {
+    opacity: 0.4;
   }
   100% {
     top: 100%;
@@ -237,8 +266,8 @@ a {
     top: 0;
     opacity: 0;
   }
-  30% {
-    opacity: 0.3;
+  20% {
+    opacity: 0.4;
   }
   100% {
     top: 100%;
@@ -807,4 +836,62 @@ a {
 .blog .slider-content-title {
   font-size: 20px;
   margin-block: 20px;
+}
+
+.touch {
+  padding-block: 30px;
+}
+.touch .card-item1 {
+  padding: 20px;
+  display: block;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: start;
+  -webkit-column-gap: 0;
+     -moz-column-gap: 0;
+          column-gap: 0;
+}
+.touch .touch-wrapper {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 20px;
+}
+.touch .touch-form-title {
+  font-size: 30px;
+  font-weight: 700;
+}
+.touch .touch-form-input {
+  margin-top: 20px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 10px;
+}
+.touch .touch-form-input input {
+  width: 100%;
+  border: 1px solid #818181;
+  height: 40px;
+  padding-left: 10px;
+  outline: 0;
+  border-radius: 5px;
+}
+.touch .touch-form-text {
+  border: 1px solid #818181;
+  width: 100%;
+  margin-top: 10px;
+  border-radius: 5px;
+  outline: 0;
+  padding: 10px;
+}
+.touch .touch-btn {
+  width: 100%;
+  background-color: #1e99f7;
+  border-radius: 5px;
+  height: 40px;
+  margin-top: 10px;
+}
+
+.footer {
+  border-top: 1px solid #10283a;
+  padding-block: 15px;
+  color: #818181;
 }/*# sourceMappingURL=main.css.map */
