--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -49,18 +49,18 @@ a {
 
     .line {
         position: relative;
-        background: rgba(255, 255, 255, 0.2);
+        background: #10283a;
         width: 1px;
         height: 100vh;
 
         &::after {
             position: absolute;
             content: '';
-            width: 4px;
+            width: 2px;
             height: 30px;
             background: white;
             top: 0;
-            left: calc(50% - 2px);
+            left: calc(50% - 1px);
             border-radius: 20px;
             animation: animateTopBottom 5s infinite;
         }
@@ -77,6 +77,30 @@ a {
 
 .line:nth-child(3)::after {
     animation-delay: .8s;
+}
+
+.card-info {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    margin-block: 10px;
+
+    .card-info-icon {
+        width: 50px;
+        height: 50px;
+        border: 1px solid $color-content;
+        border-radius: 100px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .card-info-content  {
+
+        span {
+           color: $color-content; 
+        }
+    }
 }
 
 .container {
@@ -114,8 +138,8 @@ a {
         opacity: 0;
     }
 
-    30% {
-        opacity: 0.3;
+    20% {
+        opacity: 0.4;
     }
 
     100% {
