--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -103,6 +103,12 @@ a {
     }
 }
 
+.btn-up {
+    position: fixed;
+    right: 20px;
+    bottom: 20px;
+}
+
 .container {
     margin: 0 auto;
     padding-inline: 15px;
