--- a/scss/partials/_header.scss
+++ b/scss/partials/_header.scss
@@ -6,15 +6,23 @@
     top: 0;
     left: 0;
     padding-block: 15px;
+    z-index: 99;
+    background-color: $color-bg;
+
+    &.show-menu {
+        position: fixed;
+        backdrop-filter: blur(20px);
+        animation: .5s showMenu linear;
+    }
 
     .header-wrapper {
-        display: flex; 
+        display: flex;
         justify-content: space-between;
         align-items: center;
     }
 
     .menu {
-        display: flex; 
+        display: flex;
         gap: 60px;
     }
 
@@ -32,10 +40,10 @@
         transition: .3s;
 
         &.active {
-          background-color: rgba(14, 35, 51, 0.7);
-          color: $color-primary;
-          padding: 12px;
-          border-radius: 5px;
+            background-color: rgba(14, 35, 51, 0.7);
+            color: $color-primary;
+            padding: 12px;
+            border-radius: 5px;
         }
 
         &:hover {
@@ -61,5 +69,17 @@
         &:hover {
             background-color: $color-primary;
         }
+    }
+}
+
+@keyframes showMenu {
+    0% {
+        opacity: 0;
+        top: -20px;
+    }
+
+    100% {
+        opacity: 1;
+        top: 0;
     }
 }
