--- a/scss/partials/_about.scss
+++ b/scss/partials/_about.scss
@@ -40,7 +40,7 @@
     .about-right-wrapper {
         display: flex;
         column-gap: 20px;
-        margin-top: 20px;
+        margin-block: 20px;
     }
 
     .card-right-box-wrapper {
