--- a/scss/partials/_header.scss
+++ b/scss/partials/_header.scss
@@ -7,12 +7,11 @@
     left: 0;
     padding-block: 15px;
     z-index: 99;
-    background-color: $color-bg;
 
     &.show-menu {
         position: fixed;
-        backdrop-filter: blur(20px);
         animation: .5s showMenu linear;
+        backdrop-filter: blur(20px);
     }
 
     .header-wrapper {
@@ -23,7 +22,7 @@
 
     .menu {
         display: flex;
-        gap: 60px;
+        gap: 40px;
     }
 
     .logo {
@@ -39,10 +38,8 @@
 
         transition: .3s;
 
-        &.active {
-            background-color: rgba(14, 35, 51, 0.7);
+        &.active-link {
             color: $color-primary;
-            padding: 12px;
             border-radius: 5px;
         }
 
