--- a/scss/partials/_education.scss
+++ b/scss/partials/_education.scss
@@ -11,9 +11,13 @@
 
     .education-wrapper {
         display: grid;
-        grid-template-columns: repeat(2, 1fr);
+        grid-template-columns: repeat(1, 1fr);
         gap: 20px;
         margin-top: 40px;
+
+        @include adaptive(992px) {
+           grid-template-columns: repeat(2, 1fr); 
+        }
     }
 
     .education-card-title {
