--- a/scss/partials/_touch.scss
+++ b/scss/partials/_touch.scss
@@ -10,8 +10,12 @@
 
     .touch-wrapper {
         display: grid;
-        grid-template-columns: repeat(2, 1fr);
+        grid-template-columns: repeat(1, 1fr);
         gap: 20px;
+
+        @include adaptive(992px) {
+            grid-template-columns: repeat(2, 1fr);
+        }
     }
 
     .touch-form-title {
