--- a/scss/components/_card.scss
+++ b/scss/components/_card.scss
@@ -26,7 +26,7 @@
     padding: 2px;
 
     p {
-        font-size: 50px;
+        font-size: clamp(30px, 2.6vw, 50px);
     }
 
     .card-static-body {
@@ -54,6 +54,10 @@
         backdrop-filter: blur(30px);
         padding: 50px;
         border-radius: inherit;
+
+        p {
+
+        }
     }
 }
 
