--- a/scss/partials/_about.scss
+++ b/scss/partials/_about.scss
@@ -7,8 +7,12 @@
 
     .about-wrapper {
         display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        column-gap: 40px;
+        grid-template-columns: repeat(1, 1fr);
+        gap: 40px;
+
+        @include adaptive(992px) {
+            grid-template-columns: repeat(2, 1fr);
+        }
     }
 
     & .about-title {
@@ -38,9 +42,14 @@
     }
 
     .about-right-wrapper {
-        display: flex;
-        column-gap: 20px;
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        gap: 20px;
         margin-block: 20px;
+
+        @include adaptive(1200px) {
+            grid-template-columns: repeat(2, 1fr);
+        }
     }
 
     .card-right-box-wrapper {
