--- a/scss/partials/_header.scss
+++ b/scss/partials/_header.scss
@@ -32,7 +32,7 @@
 
     .logo {
 
-        font-size: 30px;
+        font-size: clamp(20px, 1.56vw, 30px);
 
         span {
             color: $color-primary;
@@ -56,6 +56,15 @@
     .header-social {
         display: flex;
         gap: 30px;
+
+        @media(width < 576px) {
+            gap: 15px;
+        }
+
+        @include adaptive(992px) {
+            gap: 10px;
+            margin-left: 10px;
+        }
     }
 
     .social-link {
