--- a/scss/partials/_home.scss
+++ b/scss/partials/_home.scss
@@ -1,4 +1,5 @@
 @use '../base/vars' as *;
+@use '../base/mixins' as *;
 
 .home {
     background:
@@ -12,6 +13,26 @@
         padding-top: 15%;
         max-width: 600px;
 
+        @media(width < 576px) {
+            padding-top: 50%;
+        }
+
+        @include adaptive(576px) {
+            padding-top: 50%;
+        }
+
+        @include adaptive(768px) {
+            padding-top: 30%;
+        }
+
+        @include adaptive(992px) {
+            padding-top: 20%;
+        }
+
+        @include adaptive(1200px) {
+            padding-top: 15%;
+        }
+
         p {
             color: $color-content;
             margin-block: 20px;
@@ -24,7 +45,7 @@
     }
 
     .home-title {
-        font-size: clamp(20px, 2.6vw, 50px);
+        font-size: clamp(30px, 2.6vw, 50px);
         font-weight: 600;
 
         span {
