--- a/scss/partials/_portfolio.scss
+++ b/scss/partials/_portfolio.scss
@@ -12,6 +12,8 @@
 
     .portfolio-tabs {
         display: flex;
+        flex-wrap: wrap;
+        gap: 20px;
         column-gap: 8px;
         justify-content: center;
     }
@@ -35,7 +37,7 @@
 
     .portfolio-wrapper {
         display: grid;
-        grid-template-columns: repeat(3, 1fr);
+        grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
         gap: 20px;
         margin-top: 30px;
     }
