--- a/scss/partials/_price.scss
+++ b/scss/partials/_price.scss
@@ -35,10 +35,14 @@
 
     .price-monthly {
         display: grid;
-        grid-template-columns: repeat(3, 1fr);
+        grid-template-columns: repeat(1, 1fr);
         margin-top: 50px;
         gap: 30px;
         align-items: center;
+
+        @include adaptive(992px) {
+            grid-template-columns: repeat(3, 1fr);
+        }
 
         &.hidden {
             display: none;
