--- a/scss/partials/_home.scss
+++ b/scss/partials/_home.scss
@@ -4,7 +4,7 @@
 .home {
     background:
         linear-gradient(90deg, #060f16, rgba(6, 15, 22, 0.2), #060f16),
-        url('../../images/Hero.jpg');
+        url('../images/Hero.jpg');
     background-position: center;
     background-size: cover;
     min-height: 700px;
