--- a/css/main.css
+++ b/css/main.css
@@ -561,8 +561,8 @@ a {
   }
 }
 .home {
-  background: -webkit-gradient(linear, left top, right top, from(#060f16), color-stop(rgba(6, 15, 22, 0.2)), to(#060f16)), url("../../images/Hero.jpg");
-  background: linear-gradient(90deg, #060f16, rgba(6, 15, 22, 0.2), #060f16), url("../../images/Hero.jpg");
+  background: -webkit-gradient(linear, left top, right top, from(#060f16), color-stop(rgba(6, 15, 22, 0.2)), to(#060f16)), url("../images/Hero.jpg");
+  background: linear-gradient(90deg, #060f16, rgba(6, 15, 22, 0.2), #060f16), url("../images/Hero.jpg");
   background-position: center;
   background-size: cover;
   min-height: 700px;
