--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -107,6 +107,7 @@ a {
     position: fixed;
     right: 20px;
     bottom: 20px;
+    z-index: 99;
 }
 
 .mobile-menu {
@@ -121,11 +122,11 @@ a {
         display: none;
     }
 
-    &.open .mobile-icon:nth-child(1) {
+    &.open-mobile .mobile-icon:nth-child(1) {
         display: none;
     }
 
-    &.open .mobile-icon:nth-child(2) {
+    &.open-mobile .mobile-icon:nth-child(2) {
         display: block;
     }
 }
@@ -135,17 +136,17 @@ a {
     top: 100%;
     left: 0;
     width: 100%;
-    background-color: $color-primary;
+    background-color: #060f16;
     opacity: 0;
     visibility: hidden;
     transition: .3s;
 
-    & .link {
+    .mobile-link {
         display: block;
         padding: 20px;
     }
 
-    &.open {
+    &.open-mobile {
         opacity: 1;
         visibility: visible;
     }
